fix: order gap

--- a/assets/styling/main.sass
+++ b/assets/styling/main.sass
@@ -514,6 +514,8 @@ main.spaced
       top: auto
       left: auto
       right: auto
+      .spaceForm
+        top: -1px
 
 // Spacemode transition
 main // Reverse
